--- a/index.html
+++ b/index.html
@@ -158,5 +158,82 @@
             </div>
         </div>
     </section>
+    <section class="advantage">
+        <div class="container container_wide-xl">
+            <h1 class="advantage__header benefits__title">Our Advantages</h1>
+            <ul class="advantage__list benefits__list">
+                <li class="advantage__item benefits__item">
+                    <img src="/img/adventage1.svg" alt="" class="advantage__img benefits__img">
+                    <h4 class="advantage__subtitle benefits__subtitle">Convenience and Transparency</h4>
+                    <p class="advantage__text benefits__text">You don’t have to find out later or only after
+                        camenierk and trarsparent Easyamper ratains pliacas and beautias of your tariaary and halpin
+                        a fixed commission on each transaction of 5</p>
+                </li>
+                <li class="advantage__item benefits__item">
+                    <img src="/img/adventage2.svg" alt="" class="advantage__img benefits__img">
+                    <h4 class="advantage__subtitle benefits__subtitle">Digital marketing and editorial support</h4>
+                    <p class="advantage__text benefits__text">You don’t have to find out later or only after
+                        camenierk and trarsparent Easyamper ratains pliacas and beautias of your tariaary and halpin
+                        a fixed commission on each transaction of 5</p>
+                </li>
+                <li class="advantage__item benefits__item">
+                    <img src="/img/adventage3.svg" alt="" class="advantage__img benefits__img">
+                    <h4 class="advantage__subtitle benefits__subtitle">Community of services dedicated to campers</h4>
+                    <p class="advantage__text benefits__text">You don’t have to find out later or only after
+                        camenierk and trarsparent Easyamper ratains pliacas and beautias of your tariaary and halpin
+                        a fixed commission on each transaction of 5</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <footer class="footer footer_gray">
+        <div class="container">
+            <div class="footer__wrapper">
+                <div class="footer__tagline">
+                    <h3 class="footer__logo">Easy Camper</h3>
+                    <h2 class="footer__slogan">When Passion Meets Comfort.</h2>
+                </div>
+                <div class="footer__menu-wrapper">
+                <div class="footer__nav">
+                    <h4 class="footer__menu-title">Discover the Network</h4>
+                    <menu class="footer__menu">
+                        <li class="footer__item"><a href="#" class="footer__menu-link">Where to shop</a></li>
+                        <li class="footer__item"><a href="#" class="footer__menu-link">Tour Guided</a></li>
+                        <li class="footer__item"><a href="#" class="footer__menu-link">Our Tours</a></li>
+                        <li class="footer__item"><a href="#" class="footer__menu-link">About Us</a></li>
+                    </menu>
+                  </div>
+                  <div class="footer__nav">     
+                    <h4 class="footer__menu-title">Become a Manager</h4>
+                    <menu class="footer__menu">
+                        <li class="footer__item"><a href="#" class="footer__menu-link">Join your Pairing</a></li>
+                        <li class="footer__item"><a href="#" class="footer__menu-link">Offer your Service</a></li>
+                        <li class="footer__item"><a href="#" class="footer__menu-link">Are you a guide?</a></li>
+                    </menu>
+                </div> 
+                    <div class="footer__nav">
+                    <h4 class="footer__menu-title">Assistance</h4>
+                    <menu class="footer__menu">
+                        <li class="footer__item"><a href="#" class="footer__menu-link">Support Center</a></li>
+                        <li class="footer__item"><a href="#" class="footer__menu-link">FAQs</a></li>
+                        <li class="footer__item"><a href="#" class="footer__menu-link">Cancallation Options</a></li>
+                        <li class="footer__item"><a href="#" class="footer__menu-link">Reliablity and Sequrity</a></li>
+                    </menu>
+                </div>
+            </div>
+            </div>
+            <div class="footer__devider"></div>
+            <div class="footer__copyright">
+                <div class="footer__copyright-text">EazyCamper. All rights reserved. </div>
+                <ul class="footer__copyright-nav">
+                    <li class="footer__copyright-item"><a href="" class="footer__copyright-link footer__menu-link">About</a></li>
+                    <li class="footer__copyright-item"><a href="" class="footer__copyright-link footer__menu-link">Site Map</a></li>
+                    <li class="footer__copyright-item"><a href="" class="footer__copyright-link footer__menu-link">Terms</a></li>
+                    <li class="footer__copyright-item"><a href="" class="footer__copyright-link footer__menu-link">Privacy Policy</a></li>
+                    <li class="footer__copyright-item"><a href="" class="footer__copyright-link footer__menu-link">Teams</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
   </body>
 </html>
